--- a/RedLightGreenLight.ipynb
+++ b/RedLightGreenLight.ipynb
@@ -27,18 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1f6d076f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import cv2\n",
-    "import os\n",
-    "import numpy as np\n",
     "import time\n",
+    "import threading\n",
+    "import random\n",
     "from playsound import playsound\n",
-    "    "
+    "import cv2\n",
+    "import os"
    ]
   },
   {
@@ -46,22 +45,48 @@
    "id": "94bb0223",
    "metadata": {},
    "source": [
-    "## Loading Images from the Directory"
+    "## Loading Images and Sounds from the Directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0ee8307a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "FRAMES_DIR =  'frames'\n",
+    "SOUNDS_DIR =  'sounds'\n",
     "\n",
-    "folderPath = 'frames'\n",
-    "mylist = os.listdir(folderPath)\n",
-    "graphic = [cv2.imread(f'{folderPath}/{imPath}') for imPath in mylist]\n",
-    "green, red, kill, winner, intro = graphic[:5]\n",
-    "    "
+    "# Load images and sounds\n",
+    "images = [cv2.imread(os.path.join(FRAMES_DIR, img)) for img in sorted(os.listdir(FRAMES_DIR))]\n",
+    "green, red, kill, winner, intro = images[:5]\n",
+    "win_sound = os.path.join(SOUNDS_DIR, 'squidWin.mp3')\n",
+    "kill_sound = os.path.join(SOUNDS_DIR, 'kill.mp3')\n",
+    "green_sound = os.path.join(SOUNDS_DIR, 'RLGLsong.mp3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11992cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variables\n",
+    "GAME_DURATION = 10\n",
+    "GAME_DURATION, RED_STATE_DURATION = 10, 1\n",
+    "state, score, game_running = \"green\", 0, True\n",
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "\n",
+    "# Green light music thread\n",
+    "def green_music():\n",
+    "    global state\n",
+    "    while game_running:\n",
+    "        if state == \"green\":\n",
+    "            playsound(green_sound, block=False)  # Play green light music\n",
+    "            time.sleep(random.randint(5, 10))  # Randomize green state duration\n",
+    "            state = \"red\""
    ]
   },
   {
@@ -74,16 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8751e79b",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "cv2.imshow('Squid Game', cv2.resize(intro, (0, 0), fx=0.5, fy=0.5))\n",
-    "cv2.waitKey(125)\n",
-    "playsound('sounds/squidWin.mp3')\n",
-    "    "
+    "cv2.waitKey(3000)"
    ]
   },
   {
@@ -96,24 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "198015f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "TIMER_MAX = 10\n",
-    "TIMER = TIMER_MAX\n",
-    "maxMove = 6500000\n",
-    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "cap = cv2.VideoCapture(0)\n",
-    "frameHeight = cap.get(cv2.CAP_PROP_FRAME_HEIGHT)\n",
-    "frameWidth = cap.get(cv2.CAP_PROP_FRAME_WIDTH)\n",
-    "win = False\n",
-    "prev = time.time()\n",
-    "prevDoll = prev\n",
-    "showFrame = cv2.resize(green, (0, 0), fx=0.5, fy=0.5)\n",
-    "isgreen = True"
+    "if not cap.isOpened():\n",
+    "    raise IOError(\"Camera not accessible\")\n",
+    "threading.Thread(target=green_music).start()\n",
+    "\n",
+    "end_time = time.time() + GAME_DURATION"
    ]
   },
   {
@@ -132,102 +148,57 @@
    "outputs": [],
    "source": [
     "\n",
-    "while cap.isOpened() and TIMER >=0:\n",
-    "    #press 'w' to win  \n",
-    "    '''  \n",
-    "    if cv2.waitKey(10) & 0xFF == ord('w'):\n",
-    "        win = Trueq\n",
-    "        break\n",
-    "    '''    \n",
-    "    #press 'w' to win    \n",
-    "    if isgreen and (cv2.waitKey(10) & 0xFF == ord('w')):\n",
-    "        win = True\n",
-    "        break\n",
-    "\n",
+    "while time.time() < end_time:\n",
     "    ret, frame = cap.read()\n",
-    "\n",
-    "    cv2.putText(showFrame, str(TIMER),\n",
-    "                    (50, 50), font,\n",
-    "                    1, (0, int(255*(TIMER)/TIMER_MAX), int(255*(TIMER_MAX-TIMER)/TIMER_MAX)),\n",
-    "                    4, cv2.LINE_AA)\n",
-    "\n",
-    "    #cv2.waitKey(125)\n",
-    "\n",
-    "    # current time\n",
-    "    cur = time.time()\n",
-    "\n",
-    "    # Update and keep track of Countdown\n",
-    "    # if time elapsed is one second\n",
-    "    # than decrease the counter\n",
-    "    if cur-prev >= 1:\n",
-    "        prev = cur\n",
-    "        TIMER = TIMER-1\n",
-    "        if cv2.waitKey(10) & 0xFF == ord('w'):\n",
-    "            win = True\n",
-    "            break\n",
-    "\n",
-    "        if isgreen:\n",
-    "            showFrame = cv2.resize(red, (0, 0), fx = 0.5, fy = 0.5)\n",
-    "            isgreen = False\n",
-    "            ref = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "            #ref = cv2.GaussianBlur(ref, (21, 21), 0)\n",
-    "            \n",
-    "        else:\n",
-    "            showFrame = cv2.resize(green, (0, 0), fx = 0.5, fy = 0.5)\n",
-    "            isgreen = True\n",
-    "    if not isgreen:    \n",
-    "        \n",
-    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "        #gray = cv2.GaussianBlur(gray, (21, 21), 0)\n",
-    "        frameDelta = cv2.absdiff(ref, gray)\n",
-    "        thresh = cv2.threshold(frameDelta, 20, 255, cv2.THRESH_BINARY)[1]\n",
-    "        change = np.sum(thresh)\n",
-    "        #print(change)\n",
-    "        if change>maxMove:\n",
-    "            break\n",
-    "    else:\n",
-    "        if cv2.waitKey(10) & 0xFF == ord('w'):\n",
-    "            win = True\n",
-    "            break        \n",
-    "\n",
-    "    camShow = cv2.resize(frame, (0, 0), fx = 0.3, fy = 0.3)\n",
-    "\n",
-    "    camH, camW = camShow.shape[0],camShow.shape[1]\n",
-    "    showFrame[0:camH,-camW:] =  camShow\n",
-    "\n",
-    "    cv2.imshow('Squid Game',showFrame)\n",
-    "    if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "    if not ret:\n",
     "        break\n",
     "\n",
-    "    #press 'w' to win    \n",
-    "    if isgreen and (cv2.waitKey(10) & 0xFF == ord('w')):\n",
-    "        win = True\n",
+    "    remaining_time = int(end_time - time.time())\n",
+    "    frame = cv2.resize(green if state == \"green\" else red, (0, 0), fx=0.5, fy=0.5)\n",
+    "\n",
+    "    if state == \"red\":  # Red state: detect 'W' key press\n",
+    "        start_time = time.time()\n",
+    "        while time.time() - start_time < RED_STATE_DURATION:\n",
+    "            cv2.imshow('Squid Game', frame)\n",
+    "            if cv2.waitKey(1) & 0xFF == ord('w'):  # Kill if 'W' pressed during red\n",
+    "                cv2.imshow('Squid Game', cv2.resize(kill, (0, 0), fx=0.5, fy=0.5))\n",
+    "                cv2.waitKey(1000)  # Show kill frame for 1 second\n",
+    "                playsound(kill_sound)\n",
+    "                state = \"kill\"\n",
+    "                break\n",
+    "        if state != \"kill\":\n",
+    "            state = \"green\"\n",
+    "\n",
+    "    elif state == \"green\":  # Green state: count 'W' key presses\n",
+    "        if cv2.waitKey(10) & 0xFF == ord('w'):\n",
+    "            score += 1\n",
+    "\n",
+    "    # Display timer and score\n",
+    "    cv2.putText(frame, f\"Time: {remaining_time}s\", (20, 30), font, 1, (0, 255, 255), 2)\n",
+    "    cv2.putText(frame, f\"Score: {score}\", (20, 70), font, 1, (0, 255, 255), 2)\n",
+    "    cv2.imshow('Squid Game', frame)\n",
+    "\n",
+    "    if cv2.waitKey(10) & 0xFF == ord('q'):  # Quit on 'Q' key press\n",
+    "        state = \"kill\"\n",
     "        break\n",
-    "            \n",
-    "cap.release() \n",
-    "# Game Over - Player Loses           \n",
-    "if not win:\n",
-    "    for i in range(10):\n",
-    "        cv2.imshow('Squid Game',cv2.resize(kill, (0, 0), fx = 0.5, fy = 0.5))\n",
-    "    playsound('sounds\\kill.mp3')    \n",
-    "    while True:\n",
-    "        cv2.imshow('Squid Game',cv2.resize(kill, (0, 0), fx = 0.5, fy = 0.5) )\n",
-    "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
-    "            break   \n",
-    "# Game Over - Player Wins    \n",
-    "else:\n",
-    "    \n",
-    "    cv2.imshow('Squid Game',cv2.resize(winner, (0, 0), fx = 0.5, fy = 0.5))\n",
-    "    cv2.waitKey(125)    \n",
-    "    playsound('sounds\\win.mp3') \n",
-    "    \n",
-    "    while True:\n",
-    "        cv2.imshow('Squid Game',cv2.resize(winner, (0, 0), fx = 0.5, fy = 0.5) )\n",
-    "        #cv2.imshow('shit',cv2.resize(graphic[3], (0, 0), fx = 0.5, fy = 0.5))\n",
-    "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
-    "            break\n",
-    "# Cleanup  \n",
-    "cv2.destroyAllWindows()"
+    "\n",
+    "# Cleanup\n",
+    "game_running = False\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "\n",
+    "# Game result\n",
+    "if state == \"kill\":  # Show kill frame before exiting\n",
+    "    cv2.imshow('Squid Game', cv2.resize(kill, (0, 0), fx=0.5, fy=0.5))\n",
+    "    cv2.waitKey(2000)  # Display kill frame for 2 seconds\n",
+    "    playsound(kill_sound)\n",
+    "else:  # Display win or lose screen based on score\n",
+    "    result = winner if score > 15 else kill\n",
+    "    cv2.imshow('Squid Game', cv2.resize(result, (0, 0), fx=0.5, fy=0.5))\n",
+    "    playsound(win_sound if score > 15 else kill_sound)\n",
+    "    cv2.waitKey(5000)\n",
+    "\n",
+    "print(f\"Game Over! Your Score: {score}\")\n"
    ]
   }
  ],
